[tool.poetry]
name = "hpctl"
version = "0.1.0"
description = "A CLI utility tool to interact with an HPC cluster."
authors = ["Renato Damas <me@renatodamas.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/rena2damas/hpctl"
documentation = ""
keywords = [
    "hpctl",
    "hpc",
    "cli",
    "pydantic",
    "argparser",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.scripts]
pbsreport = "hpctl:cli"

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
